--- a/html/createGameNoIntro.html
+++ b/html/createGameNoIntro.html
@@ -80,6 +80,12 @@
     </div>
 </div>
 <div id="menu-createGame">
+
+    <form action="post" >
+        <label for="NameInput"></label>
+        <input id="NameInput" type="text" placeholder="Enter your name here" name="playerName" required>
+    </form>
+
         <a href="lobbyHost.html" class="button" role="button" id="continue-createGame">CONTINUE</a>
 
 
