--- a/html/createGame.html
+++ b/html/createGame.html
@@ -197,7 +197,7 @@
     </div>
 </div>
 <div id="menu-createGame">
-    <form action="post" >
+    <form method="post" >
         <label for="NameInput"></label>
         <input id="NameInput" type="text" placeholder="Enter your name here" name="playerName" required>
     </form>
