--- a/html/joinLobby.html
+++ b/html/joinLobby.html
@@ -20,7 +20,7 @@
 <main class="joinLobby">
     <form method="post" >
         <label for="NameInput"></label>
-        <input id="NameInput" type="text" placeholder="Enter your name here" name="playerName" required>
+        <input id="NameInput" type="text" placeholder="Enter your name here..." name="playerName" required>
     </form>
 
     <form  method="post">
