--- a/html/createGame.html
+++ b/html/createGame.html
@@ -199,7 +199,7 @@
 <div id="menu-createGame">
     <form method="post" >
         <label for="NameInput"></label>
-        <input id="NameInput" type="text" placeholder="Enter your name here" name="playerName" required>
+        <input id="NameInput" type="text" placeholder="Enter your name here..." name="playerName" required>
     </form>
         <a href="lobbyHost.html" class="button" role="button" id="continue-createGame">CONTINUE</a>
 
