Add about page script and update back button behavior
Replaced the BACK link in aboutPage.html with a button and added aboutPage.js to handle navigation back to the main menu. Updated index.js to initialize the about page script when appropriate.

--- a/html/aboutPage.html
+++ b/html/aboutPage.html
@@ -39,7 +39,7 @@
 
 <div id="menu">
     <section class="menu">
-        <a href="./startSiteNoIntro.html" class="button" role="button" id="back-to-main-menu" >BACK</a>
+        <button id="back-to-main-menu">BACK</button>
     </section>
 </div>
 
