--- a/html/aboutPage.html
+++ b/html/aboutPage.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/images/logo.png" type="image.png">
 
+    <script src="/scripts/index.js" type="module" defer></script>
+
+
 </head>
 <body id="about">
 
