Add JS logic for help page and update navigation
Introduces helpPage.js to handle help page-specific logic, including a back button that redirects to /start. Updates helpPage.html to use a button for navigation and loads the new script. Modifies index.js to initialize help page logic based on the page ID.

--- a/html/helpPage.html
+++ b/html/helpPage.html
@@ -5,8 +5,11 @@
     <title>UYES Help Page</title>
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
+
+    <script src="/scripts/index.js" type="module" defer></script>
+
 </head>
-<body class="help-page-body">
+<body id="help-page-body" class="help-page-body">
 
 <div class="help-rules-container">
     <details class="help-collapsible-section" open>
@@ -82,7 +85,7 @@
     </section>
 </div>
 
-<a href="./startSiteNoIntro.html" class="button backButtonTop" role="button">BACK</a>
+<button class="button backButtonTop" id="backBtnHelp">BACK</button>
 
 
 </body>
