--- a/html/chooseLobby.html
+++ b/html/chooseLobby.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
 
+    <script src="/scripts/index.js" type="module" defer></script>
+
 
 </head>
 <body id="chooseLobby">
