--- a/html/gameplay4.html
+++ b/html/gameplay4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
 </head>
 
