Add create game page logic and update navigation
Introduced scripts/createGame.js to handle intro and back button logic for the create game page. Updated createGame.html to use buttons instead of anchor tags for navigation and wired up the new script. Modified chooseLobby.js to use correct intro flags and step IDs. Updated index.js to initialize the create game logic when on the createGame page.

--- a/html/createGame.html
+++ b/html/createGame.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
 
+    <script src="/scripts/index.js" type="module" defer></script>
+
+
 </head>
 <body id="createGame">
-<a href="./chooseLobby.html" class="button backButtonTop" role="button">BACK</a>
+
+<button class="button backButtonTop"  id="createBackBtn">BACK</button>
 
 <div id="milch-glas-layer">
 
@@ -205,7 +209,7 @@
 
 
 </div>
-<a href="./createGame.html" class="button" role="button" id="eichberg2"></a>
+<button id="eichberg2"></button>
 
 
 
