Make lobby code dynamic

--- a/html/lobbyHost.html
+++ b/html/lobbyHost.html
@@ -27,7 +27,7 @@
 
 <div id="main" class="lobby">
     <div class="gameCode">
-        <h2>Game-Code: #329480832        </h2>
+        <h2 id="game-code"></h2>
         <button id="refresh-code-button">Regenerate</button>
     </div>
     <div id="player-lobby-container">
