Fix lobby syntax errors and use relative stylesheet paths

--- a/html/joinLobby.html
+++ b/html/joinLobby.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>joinLobby</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
     <script src="/scripts/joinLobby.js" type="module" defer></script>
 </head>
