--- a/html/chooseLobbyNoIntro.html
+++ b/html/chooseLobbyNoIntro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>chooseLobby</title>
 
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
 
 
