--- a/html/joinLobby.html
+++ b/html/joinLobby.html
@@ -19,16 +19,20 @@
 </a>
 
 <main class="joinLobby">
-    <form id="join-form" method="post">
+    <form method="post" >
         <label for="NameInput"></label>
         <input id="NameInput" type="text" placeholder="Enter your name here..." name="playerName" required>
+    </form>
 
+    <form  method="post">
         <label for="gameCodeInput"></label>
         <input id="gameCodeInput" type="text" placeholder="Enter game-code here..." name="game-code" required>
-
         <button class="joinForm" id="joinGame" type="submit">JOIN</button>
 <!--        <button class="joinForm" id="cancelJoin" type="button">CANCEL</button>-->
+
     </form>
+
+
 </main>
 
 </body>
