--- a/html/joinLobby.html
+++ b/html/joinLobby.html
@@ -5,7 +5,7 @@
     <title>joinLobby</title>
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
-    <script src="/scripts/joinLobby.js" type="module" defer></script>
+    <script src="/scripts/index.js" type="module" defer></script>
 </head>
 <body id="joinLobby">
 <div id="header">
@@ -14,25 +14,18 @@
         <p id="credits">by Andrii, Bilal, Daria , Simon, Srisharanya</p>
     </section>
 </div>
-<a href="./chooseLobbyNoIntro.html" class="button backButtonTop" role="button">BACK</a>
-<a id="eichberg2" href="chooseLobby.html">
-</a>
+<button class="button backButtonTop" id="joinBackBtn" >BACK</button>
 
 <main class="joinLobby">
-    <form method="post" >
+    <form method="POST" action="/api/joinGame">
         <label for="NameInput"></label>
-        <input id="NameInput" type="text" placeholder="Enter your name here..." name="playerName" required>
-    </form>
+        <input id="NameInput" type="text" placeholder="Enter your name here..." name="name"> <!-- kein required -->
 
-    <form  method="post">
         <label for="gameCodeInput"></label>
-        <input id="gameCodeInput" type="text" placeholder="Enter game-code here..." name="game-code" required>
+        <input id="gameCodeInput" type="text" placeholder="Enter game-code here..." name="code" required>
+
         <button class="joinForm" id="joinGame" type="submit">JOIN</button>
-<!--        <button class="joinForm" id="cancelJoin" type="button">CANCEL</button>-->
-
     </form>
-
-
 </main>
 
 </body>
