--- a/html/lobby.html
+++ b/html/lobby.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=refresh" />
+
+    <script type="module" src="/scripts/index.js" defer></script>
+
 </head>
-<body id="Joiner">
+<body id="lobby">
 <div id="header">
     <section>
         <h1 id="gameTitle">UYES!</h1>
@@ -20,43 +23,21 @@
 
 <button  class="button backButtonTop" >HELP</button>
 
+
+
 <div id="main" class="lobby">
     <div class="gameCode">
-        <h2>Game-Code: #329480832        </h2>
+        <h2 id="game-code"></h2>
         <button id="refresh-code-button">Regenerate</button>
     </div>
-
     <div id="player-lobby-container">
         <h2>Lobby</h2>
 
-        <div class="player-lobby-fields">
-            <p id="hostTag">host:</p>
-            <p class="takenSlot">Daria</p>
-        </div>
-        <div class="player-lobby-fields">
-            <p class="takenSlot">Bilal (you)</p>
-            <button class="removePlayerButton">Remove</button>
-        </div>
-        <div class="player-lobby-fields">
-            <p class="openSlot">Player3...</p>
-            <button class="removePlayerButton">Remove</button>
-
-        </div>
-        <div class="player-lobby-fields">
-            <p class="openSlot">Player4...</p>
-            <button class="removePlayerButton">Remove</button>
-
-        </div>
-        <div class="player-lobby-fields">
-            <p class="openSlot">Player5...</p>
-            <button class="removePlayerButton">Remove</button>
-
-        </div>
     </div>
 </div>
 
 <div id="menu">
-    <button id="startGameplay">Start Game</button>
+    <button id="startGameplay" class="notFull">Start Game</button>
 </div>
 
 
