Add lobby exit and help functionality to lobby UI
Implemented a 'leave-lobby' socket event on the backend and corresponding UI/UX in the lobby frontend, including help and exit overlays. Updated join form to use 'playerName' for consistency. Enhanced lobby.js and lobby.css to support help and exit modals, improving user experience for leaving or getting help in the lobby.

--- a/html/joinLobby.html
+++ b/html/joinLobby.html
@@ -19,7 +19,7 @@
 <main class="joinLobby">
     <form method="POST" action="/api/joinGame">
         <label for="NameInput"></label>
-        <input id="NameInput" type="text" placeholder="Enter your name here..." name="name"> <!-- kein required -->
+        <input id="NameInput" type="text" placeholder="Enter your name here..." name="playerName">
 
         <label for="gameCodeInput"></label>
         <input id="gameCodeInput" type="text" placeholder="Enter game-code here..." name="code" required>
