Consolidate gameplay page and add gameplay logic

--- a/html/gameplay.html
+++ b/html/gameplay.html
@@ -2,23 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Game</title>
+    <title>Gameplay</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
+    <script src="/scripts/index.js" type="module" defer></script>
 </head>
-
-<body>
-<button  class="button backButtonTop" >HELP</button>
-
+<body id="gameplay">
+<button class="button backButtonTop">HELP</button>
 <button id="UYES">UYES</button>
+<div id="milchglas2" class="hidden"></div>
+<div id="winner" class="hidden"></div>
+<div id="ending-buttons" class="hidden">
+    <button class="ending">Change Settings</button>
+    <button class="ending">Play Again</button>
+    <button class="ending">Back To Menu</button>
+</div>
 <div id="header">
     <section>
         <h1 id="gameTitle">UYES!</h1>
         <p id="credits">by Andrii, Bilal, Daria , Simon, Srisharanya</p>
     </section>
 </div>
-
 <div id="piles">
     <div class="pile" id="draw-pile">
         <h2>Draw:</h2>
@@ -79,34 +84,11 @@
         </div>
     </div>
 </div>
-
 <div id="own-avatar"></div>
-<div id="player-hand-container">
-    <span class="card normal red"><span><span>2</span></span></span>
-    <span class="card normal red"><span><span>3</span></span></span>
-    <span class="card normal blue"><span><span>4</span></span></span>
-    <span class="card normal green"><span><span>6</span></span></span>
-    <span class="card normal blue"><span><span>4</span></span></span>
-    <!--    <span class="card big green"><span><span>6</span></span></span>-->
-    <!--    <span class="card big red"><span><span>3</span></span></span>-->
-    <!--    <span class="card big blue"><span><span>4</span></span></span>-->
-    <!--    <span class="card big green"><span><span>6</span></span></span>-->
-    <!--    <span class="card big green"><span><span>6</span></span></span>-->
-    <!--    <span class="card big blue"><span><span>4</span></span></span>-->
-    <!--    <span class="card big red"><span><span>3</span></span></span>-->
-    <!--    <span class="card big green"><span><span>6</span></span></span>-->
-    <!--    <span class="card big blue"><span><span>4</span></span></span>-->
-    <!--    <span class="card big green"><span><span>6</span></span></span>-->
-
-
-</div>
+<div id="player-hand-container"></div>
 <div id="yourTurn">
     Your turn in:
-    <div id="roundCountTurn">
-        2
-    </div>
+    <div id="roundCountTurn">0</div>
 </div>
-
-
 </body>
 </html>
