Dynamic player avatars and card count updates

--- a/html/gameplay.html
+++ b/html/gameplay.html
@@ -34,56 +34,7 @@
         <span class="card big red"><span><span>3</span></span></span>
     </div>
 </div>
-<div id="player-avatars">
-    <div class="row">
-        <div class="avatar" id="player2">
-            <div class="cardHands">
-                <div class="avatar-row">
-                    <h2 class="cardsleft">2x</h2>
-                </div>
-                <div class="avatar-row">
-                    <span class="card small back"><span><span></span></span></span>
-                    <span class="card small back"><span><span></span></span></span>
-                </div>
-            </div>
-        </div>
-        <div class="avatar" id="player3">
-            <div class="cardHands">
-                <div class="avatar-row">
-                    <h2 class="cardsleft">4x</h2>
-                </div>
-                <div class="avatar-row">
-                    <span class="card small back"><span><span></span></span></span>
-                    <span class="card small back"><span><span></span></span></span>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="avatar" id="player1">
-            <div class="cardHands">
-                <div class="avatar-row">
-                    <h2 class="cardsleft">3x</h2>
-                </div>
-                <div class="avatar-row">
-                    <span class="card small back"><span><span></span></span></span>
-                    <span class="card small back"><span><span></span></span></span>
-                </div>
-            </div>
-        </div>
-        <div class="avatar" id="player4">
-            <div class="cardHands">
-                <div class="avatar-row">
-                    <h2 class="cardsleft">0x</h2>
-                </div>
-                <div class="avatar-row">
-                    <span class="card small back"><span><span></span></span></span>
-                    <span class="card small back"><span><span></span></span></span>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<div id="player-avatars"></div>
 <div id="own-avatar"></div>
 <div id="player-hand-container"></div>
 <div id="yourTurn">
