--- a/html/aboutPage.html
+++ b/html/aboutPage.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/images/logo.png" type="image.png">
+    <script type="importmap" src="/scripts/importmap.json"></script>
 
     <script src="/scripts/index.js" type="module" defer></script>
 
