--- a/html/joinLobby.html
+++ b/html/joinLobby.html
@@ -5,6 +5,7 @@
     <title>joinLobby</title>
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
+    <script type="importmap" src="/scripts/importmap.json"></script>
     <script src="/scripts/index.js" type="module" defer></script>
 </head>
 <body id="joinLobby">
