Fix UI visibility and add draw drag-and-drop

--- a/html/gameplay.html
+++ b/html/gameplay.html
@@ -28,7 +28,7 @@
 <div id="piles">
     <div class="pile" id="draw-pile">
         <h2>Draw:</h2>
-        <span class="card big back"><span><span></span></span></span>
+        <span class="card big back" draggable="true"><span><span></span></span></span>
     </div>
     <div class="pile" id="discard-pile">
         <h2>Discard:</h2>
