--- a/html/gameplay.html
+++ b/html/gameplay.html
@@ -35,7 +35,7 @@
         <span class="card big red"><span><span>3</span></span></span>
     </div>
 </div>
-<div id="player-avatars"></div>
+<div id="player-avatars1"><div id="player-avatars2"></div></div>
 <div id="own-avatar"></div>
 <div id="player-hand-container"></div>
 <div id="yourTurn">
