Display winner with avatar and show wait message for joiners

--- a/public/html/gameplay.html
+++ b/public/html/gameplay.html
@@ -19,6 +19,7 @@
     <button class="ending">Play Again</button>
     <button class="ending">Back To Menu</button>
 </div>
+<div id="wait-for-host" class="hidden">Wait for the host...</div>
 <div id="header">
     <section>
         <h1 id="gameTitle">UYES!</h1>
