Add shared help menu support

--- a/public/html/gameplay.html
+++ b/public/html/gameplay.html
@@ -10,7 +10,7 @@
     <script src="/scripts/index.js" type="module" defer></script>
 </head>
 <body id="gameplay">
-<button class="button backButtonTop">HELP</button>
+
 <button id="UYES">UYES</button>
 <div id="milchglas2" class="hidden"></div>
 <div id="winner" class="hidden"></div>
@@ -26,6 +26,24 @@
         <p id="credits">by Andrii, Bilal, Daria , Simon, Srisharanya</p>
     </section>
 </div>
+<div id="helpButtonClicked">
+    <button id="closeHelpBtn" >Help</button>
+    <button id="SettingsBtn" >Settings</button>
+    <button id="ExitGameBtn">Exit Game</button>
+    <button id="AboutBtn" >About</button>
+
+</div>
+
+<div id="submitLeaving" >
+    <h2>Are You Sure?</h2>
+    <div>
+        <button id="stopLeaving">No</button>
+        <button id="leave">Exit</button>
+    </div>
+
+</div>
+
+<button  id="helpBtnLobby" class="button backButtonTop" >HELP</button>
 <div id="piles">
     <div class="pile" id="draw-pile">
         <h2>Draw:</h2>
