--- a/public/html/gameplay.html
+++ b/public/html/gameplay.html
@@ -13,7 +13,7 @@
 
 <button id="UYES">UYES</button>
 <div id="milchglas2" class="hidden"></div>
-<div id="winner" class="hidden"></div>
+<div id="winner" class="hidden"><div class="player-name"></div></div>
 <div id="ending-buttons" class="hidden" style="display:none;">
     <button class="ending">Change Settings</button>
     <button class="ending">Play Again</button>
