--- a/public/html/gameplay.html
+++ b/public/html/gameplay.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <script src="/scripts/index.js" type="module" defer></script>
 </head>
 <body id="gameplay">
@@ -32,6 +33,10 @@
     <button id="ExitGameBtn">Exit Game</button>
     <button id="AboutBtn" >About</button>
 
+</div>
+
+<div id="gameDirection">
+    <i class="fas fa-rotate-right"></i>
 </div>
 
 <div id="submitLeaving" >
