feat: enforce wild color choice and 2p reverse

--- a/public/html/gameplay.html
+++ b/public/html/gameplay.html
@@ -61,5 +61,13 @@
     Your turn in:
     <div id="roundCountTurn">0</div>
 </div>
+<div id="color-overlay" class="hidden">
+    <div id="color-options">
+        <span class="card big red" data-color="red"><span><span></span></span></span>
+        <span class="card big yellow" data-color="yellow"><span><span></span></span></span>
+        <span class="card big green" data-color="green"><span><span></span></span></span>
+        <span class="card big blue" data-color="blue"><span><span></span></span></span>
+    </div>
+</div>
 </body>
 </html>
