Add hand limit setting and improve hand UI

--- a/public/html/createGame.html
+++ b/public/html/createGame.html
@@ -156,7 +156,14 @@
         <div id="starting-cards">
             <h3 class="amount">Starting Cards:<span id="cardCount">4</span></h3>
             <button class="subtract amount">-</button>
-            <input id="cardSlider" type="range" min="4" max="50" step="1.0" value="7">
+            <input id="cardSlider" type="range" min="4" max="30" step="1.0" value="7">
+            <button class="add amount">+</button>
+
+        </div>
+        <div id="hand-limit">
+            <h3 class="amount">Hand Limit:<span id="handLimitCount">30</span></h3>
+            <button class="subtract amount">-</button>
+            <input id="handLimitSlider" type="range" min="5" max="30" step="1.0" value="30">
             <button class="add amount">+</button>
 
         </div>
