Implement lobby closing on end screen

--- a/public/html/gameplay.html
+++ b/public/html/gameplay.html
@@ -18,7 +18,7 @@
 <div id="ending-buttons" class="hidden" style="display:none;">
     <button class="ending">Change Settings</button>
     <button class="ending">Play Again</button>
-    <button class="ending">Back To Menu</button>
+    <button id="backHome" class="ending">Back To Home</button>
 </div>
 <div id="wait-for-host" class="hidden">Wait for the host...</div>
 <div id="header">
