fix: make player count immutable in change settings

--- a/public/html/changeSettings.html
+++ b/public/html/changeSettings.html
@@ -21,9 +21,9 @@
     <div id="start-settings">
         <div id="starting-players">
             <h3 class="amount">Starting Players:  <span id="playerCount">4</span></h3>
-            <button class="subtract amount">-</button>
-            <input id="playerSlider" type="range" min="2" max="5" step="1.0" value="4">
-            <button class="add amount">+</button>
+            <button class="subtract amount" disabled>-</button>
+            <input id="playerSlider" type="range" min="2" max="5" step="1.0" value="4" disabled>
+            <button class="add amount" disabled>+</button>
         </div>
         <div id="starting-cards">
             <h3 class="amount">Starting Cards:<span id="cardCount">4</span></h3>
