Add rules page and update help menus

--- a/public/html/lobby.html
+++ b/public/html/lobby.html
@@ -21,7 +21,7 @@
 
 <div id="helpButtonClicked">
     <button id="closeHelpBtn" >Help</button>
-    <button id="SettingsBtn" >Settings</button>
+    <button id="RulesBtn" >Rules</button>
     <button id="ExitGameBtn">Exit Game</button>
     <button id="AboutBtn" >About</button>
 
