--- a/public/html/gameplay.html
+++ b/public/html/gameplay.html
@@ -60,7 +60,9 @@
     </div>
 </div>
 <div id="player-avatars1"><div id="player-avatars2"></div></div>
-<div id="own-avatar"></div>
+<div id="own-avatar"><button id="changeAvatar">
+    <i class="fas fa-rotate"></i>
+    </button></div>
 <div id="player-hand-container"></div>
 <div id="yourTurn">
     Your turn in:
