Add timer display to gameplay UI
Introduced a new timer element in gameplay.html and styled it in gameplay.css. The timer is centered on the screen to enhance visibility during gameplay.

--- a/public/html/gameplay.html
+++ b/public/html/gameplay.html
@@ -59,6 +59,9 @@
         <span class="card big red"><span><span>3</span></span></span>
     </div>
 </div>
+<div id="timerContainer">
+    <h3 id="timer">13s</h3>
+</div>
 <div id="player-avatars1"><div id="player-avatars2"></div></div>
 <div id="own-avatar"><button id="changeAvatar">
     <i class="fas fa-rotate"></i>
