--- a/html/lobbyHost.html
+++ b/html/lobbyHost.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=refresh" />
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=refresh"/>
 </head>
 <body>
 <div id="header">
@@ -17,12 +18,11 @@
 </div>
 
 
-
-<button  class="button backButtonTop" >HELP</button>
+<button class="button backButtonTop">HELP</button>
 
 <div id="main" class="lobby">
     <div class="gameCode">
-        <h2>Game-Code: #329480832        </h2>
+        <h2>Game-Code: #329480832</h2>
         <button id="refresh-code-button">Regenerate</button>
     </div>
 
@@ -30,7 +30,7 @@
         <h2>Lobby</h2>
 
         <div class="player-lobby-fields">
-            <p id="hostTag">host:</p>
+            <p id="hostTag">Host:</p>
             <p class="takenSlot">Daria (you)</p>
         </div>
         <div class="player-lobby-fields">
