Expand rules page with detailed instructions

--- a/public/html/rulesPage.html
+++ b/public/html/rulesPage.html
@@ -9,22 +9,40 @@
 </head>
 <body id="rules-page-body" class="help-page-body">
 <div class="help-rules-container">
-    <h2>UYES! Rules</h2>
+    <h2>UYES! Rulebook</h2>
+    <p>
+        UYES! is an UNO inspired card game. When creating a lobby the host can
+        choose the number of players, how many cards everyone starts with and
+        which special cards are included.
+    </p>
+
+    <h3>Setup</h3>
     <ul>
-        <li>Each player gets 7 cards.</li>
-        <li>The rest goes into a draw pile; one card is turned over to start the discard pile.</li>
-        <li>You can play a card if it matches the same color or number.</li>
-        <li>Special cards:
-            <ul>
-                <li><strong>+2</strong>: Next player draws 2 cards and skips a turn</li>
-                <li><strong>Skip</strong>: Next player is skipped</li>
-                <li><strong>Reverse</strong>: Reverses the direction of play</li>
-                <li><strong>Wild</strong>: Player chooses the next color</li>
-                <li><strong>+4 Wild</strong>: Like Wild, but next player draws 4 cards</li>
-            </ul>
-        </li>
-        <li>Say "UYES!" when you only have 1 card left!</li>
-        <li>The first player to get rid of all their cards wins.</li>
+        <li>Each player receives the selected amount of starting cards (7 by default).</li>
+        <li>The remaining cards become the draw pile. Reveal the top card to start the discard pile.</li>
+    </ul>
+
+    <h3>Taking a Turn</h3>
+    <ul>
+        <li>Play a card that matches the color or number of the top discard.</li>
+        <li>If you have no playable card, draw one. You may play it immediately if it fits; otherwise your turn ends.</li>
+        <li>Whenever you have exactly one card left you must press the “UYES!” button before the turn ends. Forgetting or pressing it too early makes you draw a penalty card.</li>
+    </ul>
+
+    <h3>Card Types</h3>
+    <ul>
+        <li><strong>Number cards</strong>: 1–9 in red, yellow, green and blue.</li>
+        <li><strong>Draw Two</strong> (+2): the next player draws two cards and is skipped. Stacking draw cards is currently not allowed.</li>
+        <li><strong>Skip</strong>: the next player loses their turn.</li>
+        <li><strong>Reverse</strong>: changes the playing direction. With two players it works like Skip.</li>
+        <li><strong>Wild</strong>: choose the color that continues play.</li>
+        <li><strong>Wild Draw Four</strong> (+4): choose a color, the next player draws four cards and is skipped.</li>
+    </ul>
+
+    <h3>Running out of Cards</h3>
+    <ul>
+        <li>If the draw pile runs out, shuffle the discard pile to form a new one.</li>
+        <li>The first player who discards all their cards wins the round.</li>
     </ul>
 </div>
 <div id="header">
