--- a/public/html/gameplay.html
+++ b/public/html/gameplay.html
@@ -79,5 +79,21 @@
         <span class="card big blue" data-color="blue"><span><span></span></span></span>
     </div>
 </div>
+
+<span class="card normal back draw leftDown notVisible"><span><span></span></span></span>
+<span class="card normal back draw leftTop notVisible"><span><span></span></span></span>
+<span class="card normal back draw rightDown"><span><span></span></span></span>
+<span class="card normal back draw rightTop notVisible"><span><span></span></span></span>
+<span class="card normal back draw self notVisible"><span><span></span></span></span>
+
+<span class="card normal back discard leftDown"><span><span></span></span></span>
+<span class="card normal back discard leftTop notVisible"><span><span></span></span></span>
+<span class="card normal back discard rightDown notVisible"><span><span></span></span></span>
+<span class="card normal back discard rightTop notVisible"><span><span></span></span></span>
+<span class="card normal back discard self notVisible"><span><span></span></span></span>
+
+
+
+
 </body>
 </html>
