Add rules link and card visuals

--- a/public/html/aboutPage.html
+++ b/public/html/aboutPage.html
@@ -43,6 +43,7 @@
 <div id="menu">
     <section class="menu">
         <button id="back-to-main-menu">BACK</button>
+        <button id="rulesBtnAbout">RULES</button>
     </section>
 </div>
 
