--- a/public/html/helpPage.html
+++ b/public/html/helpPage.html
@@ -17,22 +17,8 @@
             <h2>UYES! Rules <span class="help-arrow-icon">></span></h2>
         </summary>
         <div class="help-section-content">
-            <ul>
-                <li>Each player gets 7 cards.</li>
-                <li>The rest goes into a draw pile; one card is turned over to start the discard pile.</li>
-                <li>You can play a card if it matches the same color or number.</li>
-                <li>Special cards:
-                    <ul>
-                        <li><strong>+2</strong>: Next player draws 2 cards and skips a turn</li>
-                        <li><strong>Skip</strong>: Next player is skipped</li>
-                        <li><strong>Reverse</strong>: Reverses the direction of play</li>
-                        <li><strong>Wild</strong>: Player chooses the next color</li>
-                        <li><strong>+4 Wild</strong>: Like Wild, but next player draws 4 cards</li>
-                    </ul>
-                </li>
-                <li>Say "UYES!" when you only have 1 card left!</li>
-                <li>The first player to get rid of all their cards wins.</li>
-            </ul>
+            <p>Read the full rules on our dedicated page.</p>
+            <button class="button" id="rulesBtnHelp">Go to Rules</button>
         </div>
     </details>
 
