Update rules, remove unused file, and improve mobile styles
Clarified draw card stacking rules in rulesPage.html. Removed the unused startSiteNoIntro.html file. Cleaned up commented code in startSite.html. Improved mobile responsiveness and dialog visibility in generalStyles.css, intro.css, introStartSite.css, and startSite.css.

--- a/public/html/rulesPage.html
+++ b/public/html/rulesPage.html
@@ -37,7 +37,9 @@
         </li>
         <li><strong>Draw Two</strong> (+2):
             <span class="card small red"><span><span>2+</span></span></span>
-            the next player draws two cards and is skipped. Stacking draw cards is currently not allowed.
+            the next player draws two cards and is skipped. Stacking draw cards is allowed.
+            So stacked cards add their draw value and the last player who doesn't stack has
+            to draw the cumulated amount of cards and is skipped.
         </li>
         <li><strong>Skip</strong>:
             <span class="card small yellow"><span><span><i class="fas fa-ban specialCard"></i></span></span></span>
