--- a/public/html/helpPage.html
+++ b/public/html/helpPage.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>UYES Help Page</title>
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
@@ -11,11 +13,15 @@
 </head>
 <body id="help-page-body" class="help-page-body">
 
+<div id="header">
+    <section >
+        <h1 id="gameTitle">UYES!</h1>
+        <p id="credits">by Andrii, Bilal, Daria , Simon, Srisharanya</p>
+    </section>
+</div>
 <div class="help-rules-container">
-    <details class="help-collapsible-section" open>
-        <summary class="help-section-header">
-            <h2>UYES! Rules <span class="help-arrow-icon">></span></h2>
-        </summary>
+    <details class="help-collapsible-section">
+        <summary class="help-section-header">UYES! Rules</summary>
         <div class="help-section-content">
             <p>Read the full rules on our dedicated page.</p>
             <button class="button" id="rulesBtnHelp">Go to Rules</button>
@@ -23,27 +29,22 @@
     </details>
 
     <details class="help-collapsible-section">
-        <summary class="help-section-header">
-            <h2>Volume and Language Settings<span class="help-arrow-icon">></span></h2>
-        </summary>
+        <summary class="help-section-header">Volume and Language Settings</summary>
         <div class="help-section-content">
             <div id="help-volume">
                 <h3 class="help-amount">Volume:</h3>
                 <button class="help-reduce-volume">-</button>
-                <input type="range" min="-3" max="3" step="1.0" value="0">
+                <label>
+                    <input type="range" min="-3" max="3" step="1.0" value="0">
+                </label>
                 <button class="help-increase-volume">+</button>
             </div>
-            <br>
+
             <div id="help-language">
                 <label class="help-language">Language:</label>
-                <select name="language" id="help-language-dropdown">>
-
-
+                <label for="help-language-dropdown"></label><select name="language" id="help-language-dropdown">
                     <option value="English">English</option>
-
-
                     <option value="German">German</option>
-
                 </select>
             </div>
 
@@ -52,9 +53,7 @@
     </details>
 
     <details class="help-collapsible-section">
-        <summary class="help-section-header">
-            <h2>Troubleshooting<span class="help-arrow-icon">></span></h2>
-        </summary>
+        <summary class="help-section-header">Troubleshooting</summary>
         <div class="help-section-content">
             <strong>Having problems while playing?</strong>
             <ul>Check your internet connection</ul>
@@ -64,12 +63,7 @@
     </details>
 </div>
 
-<div id="header">
-    <section>
-        <h1 id="gameTitle">UYES!</h1>
-        <p id="credits">by Andrii, Bilal, Daria , Simon, Srisharanya</p>
-    </section>
-</div>
+
 
 <button class="button backButtonTop" id="backBtnHelp">BACK</button>
 
