Improve lobby and info pages for mobile and scrolling
Added viewport meta tag to chooseLobby.html for better mobile support and cleaned up commented code. Enhanced aboutPage.css and helpPage.css with custom scrollbar colors and improved overflow handling. Updated chooseLobby.css with responsive styles for mobile devices, adjusting button sizes and layout.

--- a/public/html/chooseLobby.html
+++ b/public/html/chooseLobby.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>chooseLobby</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="icon" href="/images/logo.png" type="image.png">
 
@@ -15,10 +15,8 @@
 
 <button class="button backButtonTop" id="backBtnChooseLobby">BACK</button>
 
-<!--<a href="./startSite.html" class="button backButtonTop" role="button">BACK</a>-->
 
 <button id="eichberg2"></button>
-<!--<a href="./chooseLobby.html" class="button" role="button" id="eichberg2"></a>-->
 
 
 <div id="milch-glas-layer">
@@ -86,8 +84,7 @@
     <div id="lobbyButtons">
         <button class="button lobby" id="create">CREATE</button>
         <button class="button lobby" id="join">JOIN</button>
-<!--        <a href="./createGame.html" class="button lobby" role="button" id="create">CREATE</a>-->
-<!--        <a href="./joinLobby.html" class="button lobby" role="button" id="join">JOIN</a>-->
+
     </div>
 </div>
 
