Add specialCardsWrap div and update createGame styles
Introduced an id 'specialCardsWrap' to the special cards section in createGame.html for better structure and targeting. Updated createGame.css to add specific styles for #specialCardsWrap and its children, and refactored button and layout styles for improved UI consistency.

--- a/public/html/createGame.html
+++ b/public/html/createGame.html
@@ -160,7 +160,7 @@
             <button class="add amount">+</button>
 
         </div>
-        <div id>
+        <div id="specialCardsWrap">
             <h3>Special Cards:</h3>
             <div id="special-cards">
                 <label class="container">
@@ -193,10 +193,7 @@
                     <input id="check-all" type="checkbox">
                     <span class="checkmark"></span>
                 </label>
-
-
             </div>
-
         </div>
     </div>
 </div>
