Update join lobby input and improve responsive styles
Renamed the player name input field in joinLobby.html and updated its class and ID for consistency. Adjusted related CSS selectors in joinLobby.css. Enhanced gameplay.css with improved responsive design for mobile screens, updated timer and pile styles, and made minor layout adjustments.

--- a/public/html/joinLobby.html
+++ b/public/html/joinLobby.html
@@ -20,8 +20,8 @@
 
 <main class="joinLobby">
     <form method="POST" action="/api/joinGame">
-        <label for="NameInputJoin"></label>
-        <input id="NameInputJoin" type="text" placeholder="Enter your name here..." name="playerName">
+        <label for="NameInput"></label>
+        <input id="NameInput" class="Join" type="text" placeholder="Enter your name here..." name="playerName">
 
         <label for="gameCodeInput"></label>
         <input id="gameCodeInput" type="text" placeholder="Enter game-code here..." name="code" required>
