--- a/public/html/helpPage.html
+++ b/public/html/helpPage.html
@@ -35,7 +35,7 @@
                 <h3 class="help-amount">Volume:</h3>
                 <button class="help-reduce-volume">-</button>
                 <label>
-                    <input type="range" min="-3" max="3" step="1.0" value="0">
+                    <input id="volume-range" type="range" min="0" max="1" step="0.1" value="0.5">
                 </label>
                 <button class="help-increase-volume">+</button>
             </div>
