Link help page for settings and sync music volume

--- a/public/html/lobby.html
+++ b/public/html/lobby.html
@@ -23,7 +23,7 @@
     <button id="closeHelpBtn" >Help</button>
     <button id="RulesBtn" >Rules</button>
     <button id="ExitGameBtn">Exit Game</button>
-    <button id="AboutBtn" >About</button>
+    <button id="AboutBtn" >Settings</button>
 
 </div>
 
