--- a/public/html/gameplay.html
+++ b/public/html/gameplay.html
@@ -31,7 +31,7 @@
     <button id="closeHelpBtn" >Help</button>
     <button id="RulesBtn" >Rules</button>
     <button id="ExitGameBtn">Exit Game</button>
-    <button id="AboutBtn" >About</button>
+    <button id="AboutBtn" >Settings</button>
 
 </div>
 
